# swisscore-scheduler

./: .gitignore  README.md  setup.cfg  setup.py
examples/: birthday_example.py  quick_start.py
swisscore_scheduler/: __init__.py  creation_helper.py  scheduler.py  tasks.py  utils.py
tests/: test.py
