[metadata]
name = swisscore-scheduler
description = An easy to use scheduler that works with both regular and coroutine functions
long_description = file: README.md
long_description_content_type = text/markdown
author = SwissCorePy
author_email = swisscore.py@gmail.com
url = https://github.com/SwissCorePy/swisscore-scheduler
license = gpl-3.0
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta 
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = 
    swisscore_scheduler
python_requires = >=3.10
package_dir = 
    =.
zip_safe = no
extras_require = 
    black>=21.12b0
